cmake_minimum_required(VERSION 3.12)
project(untitled)
set(CMAKE_BUILD_TYPE release)
add_executable(${CMAKE_PROJECT_NAME} main.cpp)
list(APPEND CMAKE_PREFIX_PATH "C:/Users/xd15zhn/Documents/cpplibraries")
find_package(simucpp REQUIRED)
message(STATUS "simucpp_VERSION: ${simucpp_VERSION}")
message(STATUS "simucpp_DIR: ${simucpp_DIR}")
message(STATUS "simucpp_LIBS: ${simucpp_LIBS}")
message(STATUS "simucpp_INCLUDE_DIRS: ${simucpp_INCLUDE_DIRS}")
target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC ${simucpp_LIBS})
target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC ${simucpp_INCLUDE_DIRS})
